2018-09-21  Charlie Zender  <zender@uci.edu>

	* Convert log_lvl to int before passing to nc_set_log_level() to fix breakage with netCDF 4.6.2-RC1

	* NCO 4.7.8-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.8-alpha01: Nitrous';git push
	git tag -a 4.7.8-alpha01 -m 'Functionally identical to 4.7.7;';git push --tags

	* NCO 4.7.7 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.7: Bravura';git push
	git tag -a 4.7.7 -m 'theta;ilev;doc dap dep wht_lst;ignore_degenerate;rgr n2s, doc, gss sym ntf;ncpdq dbl_flt;ncremap skl_fl cnv_mpas';git push --tags

2018-09-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.7-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.7-beta01: BC Tanager';git push
	git tag -a 4.7.7-beta01 -m 'theta;ilev;doc dap dep wht_lst;ignore_degenerate;rgr n2s, doc, gss sym ntf;ncpdq dbl_flt;ncremap skl_fl cnv_mpas';git push --tags

	* Document new features

 	* Disable filename sanitization until further review of https://github.com/nco/nco/issues/104

	* Add nco_xtr_ilev_add() to extract ilev, when present, whenever lev is extracted (requested by Qi Tang)

2018-09-19  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.7-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.7-alpha06: Vacuum Leak';git push
	git tag -a 4.7.7-alpha06 -m 'MPAS exception harmony;docs';git push --tags

	* nco.texi document regridder omitted variable lists

	* Convert ncremap usg_prn() and nco.texi to use canonical argument format in.nc out.nc

	* nco.texi document MPAS fixed variable lists

	* Harmonize MPAS lists between nco_rgr_wgt() and nco_var_is_fix()

2018-09-18  Charlie Zender  <zender@uci.edu>

	* Reduce MPAS exclusion list to allow regridding areaCell, maxLevelCell, xCell, yCell, zCell

	* Add angleEdge, meshDensity, weightsOnEdge to MPAS fix list

	* Tweak MPAS "fixed" list to apply only to size and rank preserving arithmetic operators and to cellsOnCell

2018-09-17  Charlie Zender  <zender@uci.edu>
